--- a/html/css/typeahead.css
+++ b/html/css/typeahead.css
@@ -77,7 +77,7 @@ p + p {
 .tt-query,
 .tt-hint {
   width: 396px;
-  height: 30px;
+ /* height: 30px;*/
   padding: 8px 12px;
   font-size: 24px;
   line-height: 30px;
