--- a/html/css/typeahead.css
+++ b/html/css/typeahead.css
@@ -76,8 +76,9 @@ p + p {
 .typeahead,
 .tt-query,
 .tt-hint {
-  width: 396px;
+  /*width: 396px;*/
  /* height: 30px;*/
+   width:100%;
   padding: 8px 12px;
   font-size: 24px;
   line-height: 30px;
@@ -164,6 +165,7 @@ p + p {
 #scrollable-dropdown-menu .tt-menu {
   max-height: 150px;
   overflow-y: auto;
+  width: 100%;
 }
 
 #rtl-support .tt-menu {
